--- a/ppks_parking_fe/src/pages/ParkingDetails.css
+++ b/ppks_parking_fe/src/pages/ParkingDetails.css
@@ -53,16 +53,19 @@
   transition: background-color 0.3s;
 }
 
-.low-occupancy {
-  background-color: #e0f8e9;
+.occupancy-low {
+  background-color: #d6f5d6;
+  border-color: #a3d9a5;
 }
 
-.medium-occupancy {
-  background-color: #fff8dc; 
+.occupancy-medium {
+  background-color: #fff8d6;
+  border-color: #e4d392;
 }
 
-.high-occupancy {
-  background-color: #ffe5e5; 
+.occupancy-high {
+  background-color: #f5d6d6;
+  border-color: #d39292;
 }
 
 .day-tabs {
